<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
<RelativeLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >
	<Button 
	    android:id="@+id/BtnSeleccionarSocio"
    	android:layout_height="wrap_content"
        android:layout_width="wrap_content"
		android:text="@string/SeleccionarSocio"
	/>
    <TextView
        android:id="@+id/LblDocumento"        
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Documento" 
    	android:layout_below="@+id/BtnSeleccionarSocio"
    />    
    <EditText
        android:id="@+id/TxtDocumento"   
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
    	android:layout_below="@+id/LblDocumento"
    	android:inputType="text"
    />    
    <TextView
        android:id="@+id/LblNombre"        
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Nombre" 
    	android:layout_below="@+id/TxtDocumento"        
    />    
    <EditText
        android:id="@+id/TxtNombre"   
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
    	android:layout_below="@+id/LblNombre"
    	android:inputType="text"
    />
    <TextView
        android:id="@+id/LblApellido"        
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Apellido" 
    	android:layout_below="@+id/TxtNombre"
    />    
    <EditText
        android:id="@+id/TxtApellido"   
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
    	android:layout_below="@+id/LblApellido"
    	android:inputType="text"
    />
    <TextView
        android:id="@+id/LblSexo"        
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Sexo" 
    	android:layout_below="@+id/TxtApellido"
    />	
<!--     <Spinner
        android:id="@+id/spinnerSexo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
    	android:layout_below="@+id/LblSexo"
    /> -->    
    <EditText
        android:id="@+id/TxtSexo"   
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
    	android:layout_below="@+id/LblSexo"
    	android:inputType="text"
    />
    <TextView
        android:id="@+id/LblEstadoCivil"        
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/EstadoCivil" 
    	android:layout_below="@+id/TxtSexo"
    />	
    <EditText
        android:id="@+id/TxtEstadoCivil"   
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
    	android:layout_below="@+id/LblEstadoCivil"
    	android:inputType="text"
    />
    <TextView
        android:id="@+id/LblNacionalidad"        
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Nacionalidad" 
    	android:layout_below="@+id/TxtEstadoCivil"
    />	
    <EditText
        android:id="@+id/TxtNacionalidad"   
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
    	android:layout_below="@+id/LblNacionalidad"
    	android:inputType="text"
    />
    <TextView
        android:id="@+id/LblFechaNacimiento"        
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/FechaNacimiento" 
    	android:layout_below="@+id/TxtNacionalidad"
    />	
    <EditText
        android:id="@+id/TxtFechaNacimiento"   
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
    	android:layout_below="@+id/LblFechaNacimiento"
    	android:inputType="text"
    />
    <TextView
        android:id="@+id/LblDomicilio"        
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Domicilio" 
    	android:layout_below="@+id/TxtFechaNacimiento"
    />	
    <EditText
        android:id="@+id/TxtDomicilio"   
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
    	android:layout_below="@+id/LblDomicilio"
    	android:inputType="text"
    />
    <TextView
        android:id="@+id/LblLocalidad"        
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Localidad" 
    	android:layout_below="@+id/TxtDomicilio"
    />	
    <EditText
        android:id="@+id/TxtLocalidad"   
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
    	android:layout_below="@+id/LblLocalidad"
    	android:inputType="text"
    />
    <TextView
        android:id="@+id/LblCelular"        
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Celular" 
    	android:layout_below="@+id/TxtLocalidad"
    />	
    <EditText
        android:id="@+id/TxtCelular"   
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
    	android:layout_below="@+id/LblCelular"
    	android:inputType="text"
    />
    <TextView
        android:id="@+id/LblTelefono"        
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Telefono" 
    	android:layout_below="@+id/TxtCelular"
    />	
    <EditText
        android:id="@+id/TxtTelefono"   
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
    	android:layout_below="@+id/LblTelefono"
    	android:inputType="text"
    />
    <TextView
        android:id="@+id/LblEmail"        
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Email" 
    	android:layout_below="@+id/TxtTelefono"
    />	
    <EditText
        android:id="@+id/TxtEmail"   
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
    	android:layout_below="@+id/LblEmail"
    	android:inputType="text"
    />

    <TextView
        android:id="@+id/LblCategoria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/TxtEmail"
        android:layout_below="@+id/TxtEmail"
        android:text="@string/Categoria" />

     <EditText
         android:id="@+id/TxtCategoria"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignRight="@+id/BtnSeleccionarSocio"
         android:layout_below="@+id/LblCategoria"
         android:inputType="text"
         android:width="@dimen/activity_horizontal_margin" />

<!--    <Spinner 
        android:id="@+id/spinnerCategorias"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"        
    	android:layout_below="@+id/LblCategoria"
    /> -->
    <TextView
        android:id="@+id/ActividadesPreferidas"        
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ActividadesPreferidas" 
    	android:layout_below="@+id/TxtCategoria"
    />	    
<!--    	<Spinner -->
<!--         android:id="@+id/spinnerActividades" -->
<!--         android:layout_width="match_parent" -->
<!--         android:layout_height="wrap_content"       -->
<!--     	android:layout_below="@+id/ActividadesPreferidas"              -->
<!--     /> -->
    <EditText
        android:id="@+id/TxtActividadesPreferidas"   
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
    	android:layout_below="@+id/ActividadesPreferidas"
    	android:inputType="text"
    />        
	<Button 
	    android:id="@+id/BtnAgregarSocio"
    	android:layout_height="wrap_content"
        android:layout_width="wrap_content"
		android:text="@string/Agregar"
    	android:layout_below="@+id/TxtActividadesPreferidas"
	/>
	<Button 
	    android:id="@+id/BtnModificarSocio"
    	android:layout_height="wrap_content"
        android:layout_width="wrap_content"
		android:text="@string/Modificar"
		android:layout_toRightOf="@+id/BtnAgregarSocio"
    	android:layout_below="@+id/TxtActividadesPreferidas"
	/>
	<Button 
	    android:id="@+id/BtnEliminarSocio"
    	android:layout_height="wrap_content"
        android:layout_width="wrap_content"    	
		android:text="@string/Eliminar"
		android:layout_toRightOf="@+id/BtnModificarSocio"
    	android:layout_below="@+id/TxtActividadesPreferidas"	
	/>

	<Button
	    android:id="@+id/BtnVerCats"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/TxtEmail"
	    android:layout_toRightOf="@+id/TxtCategoria"
	    android:text="Categorias"
	    android:visibility="visible"
	/>
	
</RelativeLayout>
</ScrollView>