<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

	<Button
        android:id="@+id/FichaSocios"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/FichaSocios" 
	/>	
	<Button
        android:id="@+id/ListaSocios"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ListaSocios" 
        android:layout_below="@+id/FichaSocios"
	/>	
	<Button
        android:id="@+id/Acerca"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Acerca" 
        android:layout_below="@+id/ListaSocios"
	/>

	<Button
	    android:id="@+id/Salir"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_alignLeft="@+id/Acerca"
	    android:layout_below="@+id/Acerca"
	    android:text="@string/Salir" />
		
</RelativeLayout>
